--- a/code/UNIL_ROLEX.ipynb
+++ b/code/UNIL_ROLEX.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMD7AArpYjIVTuB3WJDXzbG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,16 +32,9 @@
         "id": "8N5qak4RLcly"
       },
       "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
       "source": [
-        "TEST"
-      ],
-      "metadata": {
-        "id": "8MzxM-caNNSP"
-      }
+        "HELLO"
+      ]
     },
     {
       "cell_type": "markdown",
