--- a/code/unil_rolex.ipynb
+++ b/code/unil_rolex.ipynb
@@ -37,6 +37,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "salut"
+      ],
+      "metadata": {
+        "id": "2IbxCUGzQYzO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "YOOOOOOO"
