--- a/code/UNIL_ROLEX.ipynb
+++ b/code/UNIL_ROLEX.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 48,
       "metadata": {
         "id": "7DTMc8x6SBXo"
       },
@@ -56,13 +56,13 @@
       ],
       "metadata": {
         "id": "Hh3vpynrWLgi",
-        "outputId": "e44d231b-d0d6-4472-ec87-1a31efa02bf4",
+        "outputId": "3eb398c9-4276-4697-decf-59f6b0d21dd6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 37,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -77,7 +77,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1db525fe-65f9-4850-bb5e-6a85414cfc71\">\n",
+              "  <div id=\"df-f520b151-f68d-41d2-85df-2250d8af64a3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -136,7 +136,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1db525fe-65f9-4850-bb5e-6a85414cfc71')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f520b151-f68d-41d2-85df-2250d8af64a3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -187,12 +187,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1db525fe-65f9-4850-bb5e-6a85414cfc71 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f520b151-f68d-41d2-85df-2250d8af64a3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1db525fe-65f9-4850-bb5e-6a85414cfc71');\n",
+              "          const element = document.querySelector('#df-f520b151-f68d-41d2-85df-2250d8af64a3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -215,7 +215,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 49
         }
       ]
     },
@@ -228,12 +228,12 @@
       ],
       "metadata": {
         "id": "NFlTAKsIjBMS",
-        "outputId": "d7617b2a-521e-45de-99c1-56c6eedc8cbd",
+        "outputId": "3636221e-7594-461c-cb9d-b21213ecb696",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 102,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +254,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 102
+          "execution_count": 50
         }
       ]
     },
@@ -266,7 +266,7 @@
       "metadata": {
         "id": "x8jCm9ZHWV-B"
       },
-      "execution_count": 29,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -278,7 +278,7 @@
       "metadata": {
         "id": "lOKAN5MvXjTO"
       },
-      "execution_count": 84,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -298,12 +298,12 @@
       ],
       "metadata": {
         "id": "Na9oFoNHWj9U",
-        "outputId": "ec305f7b-3939-4a93-c3a8-6afe1d9127e4",
+        "outputId": "e93657a0-513b-434b-e96d-544adc84329b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 85,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +313,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 85
+          "execution_count": 53
         }
       ]
     },
@@ -338,7 +338,7 @@
       "metadata": {
         "id": "ZctKHudHX_hw"
       },
-      "execution_count": 86,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -350,18 +350,18 @@
       "metadata": {
         "id": "qIestHk0Y4r_"
       },
-      "execution_count": 87,
+      "execution_count": 55,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0,stratify=y)"
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
       ],
       "metadata": {
         "id": "M_yVAG8zaSwX"
       },
-      "execution_count": 88,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -380,12 +380,12 @@
       ],
       "metadata": {
         "id": "fS0gAoGlnHNE",
-        "outputId": "4b1e6b10-477e-4545-b215-f2c429a331e8",
+        "outputId": "464bc00c-ea68-41c9-c8e8-02d51174e6b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 89,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +396,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 89
+          "execution_count": 57
         }
       ]
     },
@@ -419,7 +419,7 @@
       "metadata": {
         "id": "hTesOv1vuo81"
       },
-      "execution_count": 97,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -433,30 +433,30 @@
       ],
       "metadata": {
         "id": "uEZEvn11uvFU",
-        "outputId": "507989f0-4eba-4ebb-fabc-b0fbc8969eae",
+        "outputId": "caa378eb-b186-4f1e-ac4f-9f3dc0eb410f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 98,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "CONFUSION MATRIX:\n",
-            "[[104  27  17   7   5   3]\n",
-            " [ 36  65  36   7   7   8]\n",
-            " [ 24  37  54  16  11  17]\n",
-            " [  3   4  13  66  28  44]\n",
-            " [  1   5   7  34  59  54]\n",
-            " [  8   6  10  14  29  94]]\n",
+            "[[93 31 21 10  4  2]\n",
+            " [54 60 30  6  6  8]\n",
+            " [12 38 64 17  9 20]\n",
+            " [ 6  6 15 66 27 24]\n",
+            " [ 4  4 10 37 73 45]\n",
+            " [ 7  8  8 19 24 92]]\n",
             "ACCURACY SCORE:\n",
-            "0.4604\n",
+            "0.4667\n",
             "CLASSIFICATION REPORT:\n",
-            "\tPrecision: 0.4578\n",
-            "\tRecall: 0.4595\n",
-            "\tF1_Score: 0.4554\n"
+            "\tPrecision: 0.4645\n",
+            "\tRecall: 0.4677\n",
+            "\tF1_Score: 0.4640\n"
           ]
         }
       ]
@@ -473,7 +473,372 @@
       "metadata": {
         "id": "fUv634Q6wTNj"
       },
-      "execution_count": 108,
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "KNN (whithout data cleaning)"
+      ],
+      "metadata": {
+        "id": "3tUIDbw2HEA0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import KNeighborsClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "# Define classifier\n",
+        "classifier_knn = KNeighborsClassifier()\n",
+        "\n",
+        "# Create pipeline\n",
+        "pipe_knn = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier_knn)])\n",
+        "\n",
+        "# Fit model on training set\n",
+        "pipe_knn.fit(X_train, y_train)\n",
+        "\n",
+        "# Predictions\n",
+        "y_pred_knn = pipe_knn.predict(X_test)\n",
+        "\n",
+        "evaluate(y_test, y_pred_knn)"
+      ],
+      "metadata": {
+        "id": "01jRIxK5G9i7",
+        "outputId": "00df00d9-2405-4697-ffc6-2a5c747c7219",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONFUSION MATRIX:\n",
+            "[[121  28   8   1   1   2]\n",
+            " [ 98  51  12   1   1   1]\n",
+            " [ 81  39  33   3   1   3]\n",
+            " [ 49  30  19  29   3  14]\n",
+            " [ 48  36  29  15  29  16]\n",
+            " [ 37  29  17  23   9  43]]\n",
+            "ACCURACY SCORE:\n",
+            "0.3187\n",
+            "CLASSIFICATION REPORT:\n",
+            "\tPrecision: 0.4007\n",
+            "\tRecall: 0.3183\n",
+            "\tF1_Score: 0.3022\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions_knn = pipe_knn.predict(X_pred)\n",
+        "\n",
+        "predictions_knn = pd.DataFrame(predictions,columns=['difficulty'])\n",
+        "\n",
+        "predictions_knn.to_csv(\"LogisticRegression.csv\")"
+      ],
+      "metadata": {
+        "id": "FGPMpi4-W-ws"
+      },
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "KNN improved"
+      ],
+      "metadata": {
+        "id": "XPelT33EKDn2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Grid Search - hyperparameter tuning\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "# Define parameters to test\n",
+        "grid = {'n_neighbors':np.arange(1,100),\n",
+        "        'p':np.arange(1,3),\n",
+        "        'weights':['uniform','distance']}\n",
+        "\n",
+        "# Define and fit model\n",
+        "knn = KNeighborsClassifier()\n",
+        "classifier_knn_plus = GridSearchCV(knn, grid, cv=10)\n",
+        "\n",
+        "pipe_knn_plus = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier_knn_plus)])\n",
+        "\n",
+        "pipe_knn_plus.fit(X_train, y_train)\n",
+        "\n",
+        "print(\"Hyperparameters:\", classifier_knn_plus.best_params_)"
+      ],
+      "metadata": {
+        "id": "zICrinP2KFRX",
+        "outputId": "3bd437a4-1df3-4b20-d41f-0baeb957df3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hyperparameters: {'n_neighbors': 4, 'p': 2, 'weights': 'distance'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Predictions\n",
+        "y_pred_knn = pipe_knn.predict(X_test)\n",
+        "\n",
+        "evaluate(y_test, y_pred_knn)"
+      ],
+      "metadata": {
+        "id": "XNMxHo7JaG7T",
+        "outputId": "5f8607e0-f2b5-4ea6-a548-a395404885b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONFUSION MATRIX:\n",
+            "[[121  28   8   1   1   2]\n",
+            " [ 98  51  12   1   1   1]\n",
+            " [ 81  39  33   3   1   3]\n",
+            " [ 49  30  19  29   3  14]\n",
+            " [ 48  36  29  15  29  16]\n",
+            " [ 37  29  17  23   9  43]]\n",
+            "ACCURACY SCORE:\n",
+            "0.3187\n",
+            "CLASSIFICATION REPORT:\n",
+            "\tPrecision: 0.4007\n",
+            "\tRecall: 0.3183\n",
+            "\tF1_Score: 0.3022\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Predictions\n",
+        "y_pred_knn_plus = pipe_knn_plus.predict(X_test)\n",
+        "\n",
+        "evaluate(y_test, y_pred_knn_plus)\n"
+      ],
+      "metadata": {
+        "id": "LPwNctU9R_h2",
+        "outputId": "04af6f35-c5ab-4f9e-c9be-53ec201a7f7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONFUSION MATRIX:\n",
+            "[[116  27  14   1   1   2]\n",
+            " [ 79  64  15   4   1   1]\n",
+            " [ 65  38  44   8   2   3]\n",
+            " [ 37  25  23  40   2  17]\n",
+            " [ 37  30  23  26  36  21]\n",
+            " [ 34  22  19  13  17  53]]\n",
+            "ACCURACY SCORE:\n",
+            "0.3677\n",
+            "CLASSIFICATION REPORT:\n",
+            "\tPrecision: 0.4227\n",
+            "\tRecall: 0.3678\n",
+            "\tF1_Score: 0.3575\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions_knn_plus = pipe_knn_plus.predict(X_pred)\n",
+        "\n",
+        "predictions_knn_plus = pd.DataFrame(predictions,columns=['difficulty'])\n",
+        "\n",
+        "predictions_knn_plus.to_csv(\"LogisticRegression.csv\")"
+      ],
+      "metadata": {
+        "id": "zr5uitrAXIn4"
+      },
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Decision Tree Classifier (without data cleaning)"
+      ],
+      "metadata": {
+        "id": "YwKRk7DqHO65"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import Decision Tree Classifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "\n",
+        "# Define classifier\n",
+        "classifier_dtc = DecisionTreeClassifier()\n",
+        "\n",
+        "# Create pipeline\n",
+        "pipe_dtc = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier_dtc)])\n",
+        "\n",
+        "# Fit model on training set\n",
+        "pipe_dtc.fit(X_train, y_train)\n",
+        "\n",
+        "# Predictions\n",
+        "y_pred_dtc = pipe_dtc.predict(X_test)\n",
+        "\n",
+        "evaluate(y_test, y_pred_dtc)"
+      ],
+      "metadata": {
+        "id": "3_GI5gPVHTl8",
+        "outputId": "117a73c2-456a-4e9b-e317-8c01d07c99c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONFUSION MATRIX:\n",
+            "[[83 36 22 10  4  6]\n",
+            " [46 56 37 16  4  5]\n",
+            " [27 40 39 19 24 11]\n",
+            " [ 8 17 29 41 28 21]\n",
+            " [11 17 33 38 43 31]\n",
+            " [12 14 28 36 28 40]]\n",
+            "ACCURACY SCORE:\n",
+            "0.3146\n",
+            "CLASSIFICATION REPORT:\n",
+            "\tPrecision: 0.3163\n",
+            "\tRecall: 0.3145\n",
+            "\tF1_Score: 0.3122\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions_dtc = pipe_dtc.predict(X_pred)\n",
+        "\n",
+        "predictions_dtc = pd.DataFrame(predictions,columns=['difficulty'])\n",
+        "\n",
+        "predictions_dtc.to_csv(\"LogisticRegression.csv\")"
+      ],
+      "metadata": {
+        "id": "1GtKGXU-XV-0"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Random Forest Classifier (without data cleaning)"
+      ],
+      "metadata": {
+        "id": "hHlGKn-dHPlX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Use random forest\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "# Define classifier\n",
+        "classifier_rfc = RandomForestClassifier()\n",
+        "\n",
+        "# Create pipeline\n",
+        "pipe_rfc = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier_rfc)])\n",
+        "\n",
+        "# Fit model on training set\n",
+        "pipe_rfc.fit(X_train, y_train)\n",
+        "\n",
+        "# Predictions\n",
+        "y_pred_rfc = pipe_rfc.predict(X_test)\n",
+        "\n",
+        "evaluate(y_test, y_pred_rfc)"
+      ],
+      "metadata": {
+        "id": "h1MvDvZyIKIu",
+        "outputId": "88304373-a17f-4472-f026-aa914be65fa4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CONFUSION MATRIX:\n",
+            "[[121  27   6   6   0   1]\n",
+            " [ 77  53  23   9   1   1]\n",
+            " [ 32  43  48  22   6   9]\n",
+            " [ 16  15  15  70  16  12]\n",
+            " [ 17   9  24  56  40  27]\n",
+            " [ 13  14  17  26  28  60]]\n",
+            "ACCURACY SCORE:\n",
+            "0.4083\n",
+            "CLASSIFICATION REPORT:\n",
+            "\tPrecision: 0.4140\n",
+            "\tRecall: 0.4120\n",
+            "\tF1_Score: 0.3965\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions_rfc = pipe_rfc.predict(X_pred)\n",
+        "\n",
+        "predictions_rfc = pd.DataFrame(predictions,columns=['difficulty'])\n",
+        "\n",
+        "predictions_rfc.to_csv(\"LogisticRegression.csv\")"
+      ],
+      "metadata": {
+        "id": "oDVzIs9jXetS"
+      },
+      "execution_count": 69,
       "outputs": []
     }
   ]
