--- a/code/UNIL_ROLEX.ipynb
+++ b/code/UNIL_ROLEX.ipynb
@@ -507,11 +507,11 @@
         "evaluate(y_test, y_pred_knn)"
       ],
       "metadata": {
-        "id": "01jRIxK5G9i7",
-        "outputId": "00df00d9-2405-4697-ffc6-2a5c747c7219",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "01jRIxK5G9i7",
+        "outputId": "00df00d9-2405-4697-ffc6-2a5c747c7219"
       },
       "execution_count": 61,
       "outputs": [
@@ -543,7 +543,7 @@
         "\n",
         "predictions_knn = pd.DataFrame(predictions,columns=['difficulty'])\n",
         "\n",
-        "predictions_knn.to_csv(\"LogisticRegression.csv\")"
+        "predictions_knn.to_csv(\"KNN.csv\")"
       ],
       "metadata": {
         "id": "FGPMpi4-W-ws"
@@ -583,11 +583,11 @@
         "print(\"Hyperparameters:\", classifier_knn_plus.best_params_)"
       ],
       "metadata": {
-        "id": "zICrinP2KFRX",
-        "outputId": "3bd437a4-1df3-4b20-d41f-0baeb957df3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zICrinP2KFRX",
+        "outputId": "3bd437a4-1df3-4b20-d41f-0baeb957df3d"
       },
       "execution_count": 63,
       "outputs": [
@@ -604,54 +604,16 @@
       "cell_type": "code",
       "source": [
         "# Predictions\n",
-        "y_pred_knn = pipe_knn.predict(X_test)\n",
-        "\n",
-        "evaluate(y_test, y_pred_knn)"
-      ],
-      "metadata": {
-        "id": "XNMxHo7JaG7T",
-        "outputId": "5f8607e0-f2b5-4ea6-a548-a395404885b6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 70,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "CONFUSION MATRIX:\n",
-            "[[121  28   8   1   1   2]\n",
-            " [ 98  51  12   1   1   1]\n",
-            " [ 81  39  33   3   1   3]\n",
-            " [ 49  30  19  29   3  14]\n",
-            " [ 48  36  29  15  29  16]\n",
-            " [ 37  29  17  23   9  43]]\n",
-            "ACCURACY SCORE:\n",
-            "0.3187\n",
-            "CLASSIFICATION REPORT:\n",
-            "\tPrecision: 0.4007\n",
-            "\tRecall: 0.3183\n",
-            "\tF1_Score: 0.3022\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Predictions\n",
         "y_pred_knn_plus = pipe_knn_plus.predict(X_test)\n",
         "\n",
         "evaluate(y_test, y_pred_knn_plus)\n"
       ],
       "metadata": {
-        "id": "LPwNctU9R_h2",
-        "outputId": "04af6f35-c5ab-4f9e-c9be-53ec201a7f7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LPwNctU9R_h2",
+        "outputId": "04af6f35-c5ab-4f9e-c9be-53ec201a7f7b"
       },
       "execution_count": 71,
       "outputs": [
@@ -683,7 +645,7 @@
         "\n",
         "predictions_knn_plus = pd.DataFrame(predictions,columns=['difficulty'])\n",
         "\n",
-        "predictions_knn_plus.to_csv(\"LogisticRegression.csv\")"
+        "predictions_knn_plus.to_csv(\"Knn_plus.csv\")"
       ],
       "metadata": {
         "id": "zr5uitrAXIn4"
@@ -722,31 +684,31 @@
         "evaluate(y_test, y_pred_dtc)"
       ],
       "metadata": {
-        "id": "3_GI5gPVHTl8",
-        "outputId": "117a73c2-456a-4e9b-e317-8c01d07c99c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3_GI5gPVHTl8",
+        "outputId": "28b7908d-9682-482f-ed4d-f2c3432519a3"
       },
-      "execution_count": 66,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "CONFUSION MATRIX:\n",
-            "[[83 36 22 10  4  6]\n",
-            " [46 56 37 16  4  5]\n",
-            " [27 40 39 19 24 11]\n",
-            " [ 8 17 29 41 28 21]\n",
-            " [11 17 33 38 43 31]\n",
-            " [12 14 28 36 28 40]]\n",
+            "[[81 38 23  7  5  7]\n",
+            " [46 57 32 20  5  4]\n",
+            " [25 39 39 24 17 16]\n",
+            " [ 7 20 29 39 32 17]\n",
+            " [12 18 28 36 45 34]\n",
+            " [13 12 31 34 34 34]]\n",
             "ACCURACY SCORE:\n",
-            "0.3146\n",
+            "0.3073\n",
             "CLASSIFICATION REPORT:\n",
-            "\tPrecision: 0.3163\n",
-            "\tRecall: 0.3145\n",
-            "\tF1_Score: 0.3122\n"
+            "\tPrecision: 0.3063\n",
+            "\tRecall: 0.3068\n",
+            "\tF1_Score: 0.3038\n"
           ]
         }
       ]
@@ -758,7 +720,7 @@
         "\n",
         "predictions_dtc = pd.DataFrame(predictions,columns=['difficulty'])\n",
         "\n",
-        "predictions_dtc.to_csv(\"LogisticRegression.csv\")"
+        "predictions_dtc.to_csv(\"DecisionTreeClassifier.csv\")"
       ],
       "metadata": {
         "id": "1GtKGXU-XV-0"
@@ -797,11 +759,11 @@
         "evaluate(y_test, y_pred_rfc)"
       ],
       "metadata": {
-        "id": "h1MvDvZyIKIu",
-        "outputId": "88304373-a17f-4472-f026-aa914be65fa4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "h1MvDvZyIKIu",
+        "outputId": "88304373-a17f-4472-f026-aa914be65fa4"
       },
       "execution_count": 68,
       "outputs": [
@@ -833,7 +795,7 @@
         "\n",
         "predictions_rfc = pd.DataFrame(predictions,columns=['difficulty'])\n",
         "\n",
-        "predictions_rfc.to_csv(\"LogisticRegression.csv\")"
+        "predictions_rfc.to_csv(\"RandomForestClassifier.csv\")"
       ],
       "metadata": {
         "id": "oDVzIs9jXetS"
