--- a/code/UNIL_ROLEX.ipynb
+++ b/code/UNIL_ROLEX.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 2,
       "metadata": {
         "id": "7DTMc8x6SBXo"
       },
@@ -56,13 +56,13 @@
       ],
       "metadata": {
         "id": "Hh3vpynrWLgi",
-        "outputId": "3eb398c9-4276-4697-decf-59f6b0d21dd6",
+        "outputId": "6f09af80-5dc2-45f5-8999-791526d102ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 49,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -77,7 +77,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f520b151-f68d-41d2-85df-2250d8af64a3\">\n",
+              "  <div id=\"df-251abc28-c3a8-4b75-8378-415beb76d570\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -136,7 +136,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f520b151-f68d-41d2-85df-2250d8af64a3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-251abc28-c3a8-4b75-8378-415beb76d570')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -187,12 +187,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f520b151-f68d-41d2-85df-2250d8af64a3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-251abc28-c3a8-4b75-8378-415beb76d570 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f520b151-f68d-41d2-85df-2250d8af64a3');\n",
+              "          const element = document.querySelector('#df-251abc28-c3a8-4b75-8378-415beb76d570');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -215,7 +215,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 3
         }
       ]
     },
@@ -228,12 +228,12 @@
       ],
       "metadata": {
         "id": "NFlTAKsIjBMS",
-        "outputId": "3636221e-7594-461c-cb9d-b21213ecb696",
+        "outputId": "c98a9a17-c999-4302-c002-6e4013f78a3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +254,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 4
         }
       ]
     },
@@ -266,7 +266,7 @@
       "metadata": {
         "id": "x8jCm9ZHWV-B"
       },
-      "execution_count": 51,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -278,7 +278,7 @@
       "metadata": {
         "id": "lOKAN5MvXjTO"
       },
-      "execution_count": 52,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -298,12 +298,12 @@
       ],
       "metadata": {
         "id": "Na9oFoNHWj9U",
-        "outputId": "e93657a0-513b-434b-e96d-544adc84329b",
+        "outputId": "3e06c698-fa2b-4f43-85a8-90fb2bbfe990",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +313,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 7
         }
       ]
     },
@@ -338,7 +338,7 @@
       "metadata": {
         "id": "ZctKHudHX_hw"
       },
-      "execution_count": 54,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -350,7 +350,7 @@
       "metadata": {
         "id": "qIestHk0Y4r_"
       },
-      "execution_count": 55,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -361,7 +361,7 @@
       "metadata": {
         "id": "M_yVAG8zaSwX"
       },
-      "execution_count": 56,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -385,7 +385,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -419,7 +419,7 @@
       "metadata": {
         "id": "hTesOv1vuo81"
       },
-      "execution_count": 58,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -438,7 +438,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +473,7 @@
       "metadata": {
         "id": "fUv634Q6wTNj"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -511,9 +511,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "01jRIxK5G9i7",
-        "outputId": "00df00d9-2405-4697-ffc6-2a5c747c7219"
+        "outputId": "eba052d3-c2e2-4a51-f251-f4b0f2ce04e4"
       },
-      "execution_count": 61,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,14 +541,14 @@
       "source": [
         "predictions_knn = pipe_knn.predict(X_pred)\n",
         "\n",
-        "predictions_knn = pd.DataFrame(predictions,columns=['difficulty'])\n",
+        "predictions_knn = pd.DataFrame(predictions_knn,columns=['difficulty'])\n",
         "\n",
         "predictions_knn.to_csv(\"KNN.csv\")"
       ],
       "metadata": {
         "id": "FGPMpi4-W-ws"
       },
-      "execution_count": 62,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -583,22 +583,10 @@
         "print(\"Hyperparameters:\", classifier_knn_plus.best_params_)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zICrinP2KFRX",
-        "outputId": "3bd437a4-1df3-4b20-d41f-0baeb957df3d"
+        "id": "zICrinP2KFRX"
       },
-      "execution_count": 63,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hyperparameters: {'n_neighbors': 4, 'p': 2, 'weights': 'distance'}\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -615,7 +603,7 @@
         "id": "LPwNctU9R_h2",
         "outputId": "04af6f35-c5ab-4f9e-c9be-53ec201a7f7b"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,14 +631,14 @@
       "source": [
         "predictions_knn_plus = pipe_knn_plus.predict(X_pred)\n",
         "\n",
-        "predictions_knn_plus = pd.DataFrame(predictions,columns=['difficulty'])\n",
+        "predictions_knn_plus = pd.DataFrame(predictions_knn_plus,columns=['difficulty'])\n",
         "\n",
         "predictions_knn_plus.to_csv(\"Knn_plus.csv\")"
       ],
       "metadata": {
         "id": "zr5uitrAXIn4"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -688,27 +676,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3_GI5gPVHTl8",
-        "outputId": "28b7908d-9682-482f-ed4d-f2c3432519a3"
+        "outputId": "a3e6bf53-beda-47ec-b6d4-ab71cb8312d2"
       },
-      "execution_count": 77,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "CONFUSION MATRIX:\n",
-            "[[81 38 23  7  5  7]\n",
-            " [46 57 32 20  5  4]\n",
-            " [25 39 39 24 17 16]\n",
-            " [ 7 20 29 39 32 17]\n",
-            " [12 18 28 36 45 34]\n",
-            " [13 12 31 34 34 34]]\n",
+            "[[82 35 25  8  2  9]\n",
+            " [44 54 39 15  4  8]\n",
+            " [28 38 38 23 16 17]\n",
+            " [ 7 20 27 40 28 22]\n",
+            " [10 19 33 36 40 35]\n",
+            " [12 12 28 38 32 36]]\n",
             "ACCURACY SCORE:\n",
-            "0.3073\n",
+            "0.3021\n",
             "CLASSIFICATION REPORT:\n",
-            "\tPrecision: 0.3063\n",
-            "\tRecall: 0.3068\n",
-            "\tF1_Score: 0.3038\n"
+            "\tPrecision: 0.3021\n",
+            "\tRecall: 0.3022\n",
+            "\tF1_Score: 0.2994\n"
           ]
         }
       ]
@@ -718,14 +706,14 @@
       "source": [
         "predictions_dtc = pipe_dtc.predict(X_pred)\n",
         "\n",
-        "predictions_dtc = pd.DataFrame(predictions,columns=['difficulty'])\n",
+        "predictions_dtc = pd.DataFrame(predictions_dtc,columns=['difficulty'])\n",
         "\n",
         "predictions_dtc.to_csv(\"DecisionTreeClassifier.csv\")"
       ],
       "metadata": {
         "id": "1GtKGXU-XV-0"
       },
-      "execution_count": 67,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -763,27 +751,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h1MvDvZyIKIu",
-        "outputId": "88304373-a17f-4472-f026-aa914be65fa4"
+        "outputId": "c6b15a0f-a7fc-4b94-8d1e-5670c8703bea"
       },
-      "execution_count": 68,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "CONFUSION MATRIX:\n",
-            "[[121  27   6   6   0   1]\n",
-            " [ 77  53  23   9   1   1]\n",
-            " [ 32  43  48  22   6   9]\n",
-            " [ 16  15  15  70  16  12]\n",
-            " [ 17   9  24  56  40  27]\n",
-            " [ 13  14  17  26  28  60]]\n",
+            "[[121  22  11   4   2   1]\n",
+            " [ 82  51  18  11   2   0]\n",
+            " [ 35  39  54  18   7   7]\n",
+            " [ 18  11  13  65  24  13]\n",
+            " [ 12  10  29  52  47  23]\n",
+            " [ 15  10  17  32  23  61]]\n",
             "ACCURACY SCORE:\n",
-            "0.4083\n",
+            "0.4156\n",
             "CLASSIFICATION REPORT:\n",
-            "\tPrecision: 0.4140\n",
-            "\tRecall: 0.4120\n",
-            "\tF1_Score: 0.3965\n"
+            "\tPrecision: 0.4250\n",
+            "\tRecall: 0.4182\n",
+            "\tF1_Score: 0.4059\n"
           ]
         }
       ]
@@ -793,14 +781,14 @@
       "source": [
         "predictions_rfc = pipe_rfc.predict(X_pred)\n",
         "\n",
-        "predictions_rfc = pd.DataFrame(predictions,columns=['difficulty'])\n",
+        "predictions_rfc = pd.DataFrame(predictions_rfc,columns=['difficulty'])\n",
         "\n",
         "predictions_rfc.to_csv(\"RandomForestClassifier.csv\")"
       ],
       "metadata": {
         "id": "oDVzIs9jXetS"
       },
-      "execution_count": 69,
+      "execution_count": 20,
       "outputs": []
     }
   ]
